# shake_spear

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  plan.md  pyproject.toml
.claude/skills/character-keeper/: SKILL.md
.claude/skills/continuity-auditor/: SKILL.md
.claude/skills/dialogue-doctor/: SKILL.md
.claude/skills/immersive-session/: SKILL.md
.claude/skills/kids-story-mode/: SKILL.md
.claude/skills/mystery-mode/: SKILL.md
docs/: seed.md
projects/example_kids_story/: .gitignore  AGENTS.md  CLAUDE.md  README.md  active_state.md  continuity.md  decisions.md  index.md  story_bible.md
skills/: README.md  character_keeper.md  continuity_auditor.md  dialogue_doctor.md  immersive_session.md  kids_story_mode.md  mystery_mode.md  prompt_smith.md  quick_feedback.md  recap_and_resume.md  revision_passes.md  scene_planner.md  story_bible_builder.md  voice_and_taste.md  world_keeper.md
src/shake_spear/: __init__.py  __main__.py  cli.py  creators.py  indexer.py  scaffold.py  session.py  utils.py
templates/: active_state.md  chapter_draft.md  character_profile.md  continuity_log.md  decision_log.md  feedback_note.md  local_AGENTS.md  local_CLAUDE.md  revision_plan.md  scene_card.md  session_log.md  story_bible.md  story_project_README.md  world_element.md
tests/: conftest.py  test_cli.py  test_creators.py  test_export.py  test_indexer.py  test_readme.py  test_recap_status.py  test_sample_story.py  test_scaffold.py  test_session.py  test_skills_core.py  test_skills_genre.py  test_smoke_e2e.py  test_templates.py  test_utils.py  test_wrappers.py
(+30 files in other folders)
