[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shake_spear"
dynamic = ["version"]
description = "Markdown-first creative writing workshop with a small stdlib-only CLI (ss)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ss = "shake_spear.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

# Single source of truth for the version: src/shake_spear/__init__.py __version__
[tool.hatch.version]
path = "src/shake_spear/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/shake_spear"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
